calculator desigen done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,40 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <h1>Calculator </h1>
+    <header class="heading">
+        <!-- // -->
     </header>
-    <main>
-
+    <main id="calculator">
+        <section id="calculator-body">
+            <section class="input-field">
+                <input type="text">
+            </section>
+            <section id="all-buttons-action">
+                <section id="control-btns">
+                    <button class="control-btn"> < </button>
+                    <button class="control-btn">AC</button>
+                </section>
+                <section class="all-buttons">
+                    <button class="buttons">7</button>
+                    <button class="buttons">8</button>
+                    <button class="buttons">9</button>
+                    <button class="buttons">/</button>
+                    <button class="buttons">4</button>
+                    <button class="buttons">5</button>
+                    <button class="buttons">6</button>
+                    <button class="buttons">*</button>
+                    <button class="buttons">1</button>
+                    <button class="buttons">2</button>
+                    <button class="buttons">3</button>
+                    <button class="buttons">-</button>
+                    <button class="buttons">0</button>
+                    <button class="buttons">.</button>
+                    <button class="buttons">+</button>
+                    <button class="buttons">=</button>
+                </section>
+            </section>
+            
+        </section>
     </main>
     <footer>
 
