silly calculater done for practice bouble withoout error handler

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main id="calculator">
         <section id="calculator-body">
             <section class="input-field">
-                <input type="text">
+                <input id="inputField" type="text">
             </section>
             <section id="all-buttons-action">
                 <section id="control-btns">
